# mkg-starship

./: .gitignore  Cargo.toml  README.md
docs/: PLAN.md
src/: ambient_music.rs  ambient_vfx.rs  camera.rs  collision.rs  constants.rs  crash_explosion.rs  exhaust.rs  game_flow.rs  landing_dust.rs  main.rs  persistence.rs  physics.rs  planets.rs  ship.rs  terrain.rs  thrust_audio.rs  ui.rs
wasm/: index.html
