[package]
name = "mkg-starship"
version = "0.1.0"
edition = "2024"
description = "2D Bevy lunar lander — native and WASM"
repository = "https://github.com/mkg/mkg-starship"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "2d",
    "web",
    "png",
] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
# Required for rand / transitive crates on wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
